Improved Statistics Screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -15,7 +15,7 @@
   "evolution.config.animatedTextures": "Animated Textures",
   "evolution.config.animatedTextures.comment": "Use animated textures when available in the current resource pack. Disabling will improve performance, but animated textures, such as fire, will appear static.",
   "evolution.config.bodyTemperature": "Body Temperature Unit",
-  "evolution.config.bodyTemperature.comment": "The temperature unit used by body temperature in the game.",
+  "evolution.config.bodyTemperature.comment": "The temperature unit used for body temperature in the game.",
   "evolution.config.celestialEquator": "Show Celestial Equator",
   "evolution.config.celestialEquator.comment": "Shows a red line in the skies representing the Celestial Equator.",
   "evolution.config.celestialForceAll": "Force Show All Celestial Debug",
@@ -25,14 +25,18 @@
   "evolution.config.crazyMode": "Crazy Mode",
   "evolution.config.crazyMode.comment": "I wouldn't use this if I were you... Might have some strange effects.",
   "evolution.config.default": "Default: %1$s",
+  "evolution.config.distance": "Distance System of Units",
+  "evolution.config.distance.comment": "The system of units used for distances in the game.",
   "evolution.config.drink": "Drink Volume Unit",
-  "evolution.config.drink.comment": "The volume unit used by drinks in the game.",
+  "evolution.config.drink.comment": "The volume unit used for drinks in the game.",
   "evolution.config.ecliptic": "Show Ecliptic",
   "evolution.config.ecliptic.comment": "Shows a green line in the skies representing the Ecliptic (the plane of the orbit of the Earth around the Sun).",
+  "evolution.config.enum_imperial": "Imperial",
+  "evolution.config.enum_metric": "Metric",
   "evolution.config.followUps": "Show Follow-Up Attack Counter",
   "evolution.config.followUps.comment": "Shows follow-up attack count above the crosshair.",
   "evolution.config.food": "Food Energy Unit",
-  "evolution.config.food.comment": "The energy unit used by food in the game.",
+  "evolution.config.food.comment": "The energy unit used for food in the game.",
   "evolution.config.hitmarkers": "Show Hitmarkers",
   "evolution.config.hitmarkers.comment": "Shows hitmarkers when you damage or kill enemies.",
   "evolution.config.label.client": "Client",
