--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -25,10 +25,14 @@
   "evolution.config.crazyMode": "Modo Doido",
   "evolution.config.crazyMode.comment": "Eu não usaria isso se fosse você... Pode ter alguns efeitos estranhos.",
   "evolution.config.default": "Padrão: %1$s",
+  "evolution.config.distance": "Sistema de Unidades de Distância",
+  "evolution.config.distance.comment": "O sistema de unidades usado para distâncias no jogo.",
   "evolution.config.drink": "Unidade de Volume de Bebidas",
   "evolution.config.drink.comment": "A unidade de volume usada por bebidas no jogo.",
   "evolution.config.ecliptic": "Mostrar Eclíptica",
   "evolution.config.ecliptic.comment": "Mostra uma linha verde nos céus representando a Eclíptica (o plano de órbita da Terra em torno do Sol).",
+  "evolution.config.enum_imperial": "Imperial",
+  "evolution.config.enum_metric": "Métrico",
   "evolution.config.followUps": "Mostrar Contador de Ataques Subsequentes",
   "evolution.config.followUps.comment": "Mostra o número de ataques subsequentes em cima da mira.",
   "evolution.config.food": "Unidade de Energia de Comida",
