Improved /atm command

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -95,11 +95,10 @@
   "forge.configgui.zombieBaseSummonChance.comment": "Base zombie summoning spawn chance. Allows changing the bonus zombie summoning mechanic.",
   "_COMMENT": "_____________________________________________________________________________________________________________________________COMMANDS",
   "command.evolution.atm.chunkEmpty": "This chunk is empty",
-  "command.evolution.atm.markFail": "This chunk is already marked for continuous debug",
-  "command.evolution.atm.markSuccess": "This chunk was marked for continuous debug",
-  "command.evolution.atm.removeFail": "This chunk was already not marked for continuous debug",
-  "command.evolution.atm.removeSuccess": "This chunk is no longer marked for continuous debug",
-  "command.evolution.atm.success": "%1$s blocks were affected",
+  "command.evolution.atm.debugFail": "This chunk is already marked for continuous debug",
+  "command.evolution.atm.debugSuccess": "This chunk was marked for continuous debug",
+  "command.evolution.atm.resetFail": "This chunk was already not marked for continuous debug",
+  "command.evolution.atm.resetSuccess": "This chunk is no longer marked for continuous debug",
   "command.evolution.date.error": "The date cannot be set before %1$s at %2$s",
   "command.evolution.date.success": "The date has been changed to %1$s",
   "command.evolution.pause.pause.fail": "The game is already paused. Use /resume to resume the game",
