--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -95,11 +95,10 @@
   "forge.configgui.zombieBaseSummonChance.comment": "A chance base de invocar um zumbi. Permite mudar a mecânica de invocação bônus de zumbi.",
   "_COMMENT": "_____________________________________________________________________________________________________________________________COMMANDS",
   "command.evolution.atm.chunkEmpty": "Este chunk está vazio",
-  "command.evolution.atm.markFail": "Este chunk já está marcado para depuração contínua",
-  "command.evolution.atm.markSuccess": "Este chunk foi marcado para depuração contínua",
-  "command.evolution.atm.removeFail": "Este chunk já não estava marcado para depuração contínua",
-  "command.evolution.atm.removeSuccess": "Este chunk não está mais marcado para depuração contínua",
-  "command.evolution.atm.success": "%1$s blocos foram afetados",
+  "command.evolution.atm.debugFail": "Este chunk já está marcado para depuração contínua",
+  "command.evolution.atm.debugSuccess": "Este chunk foi marcado para depuração contínua",
+  "command.evolution.atm.resetFail": "Este chunk já não estava marcado para depuração contínua",
+  "command.evolution.atm.resetSuccess": "Este chunk não está mais marcado para depuração contínua",
   "command.evolution.date.error": "A data não pode ser definida antes de %1$s às %2$s",
   "command.evolution.date.success": "A data foi mudada para %1$s",
   "command.evolution.pause.pause.fail": "O jogo já está pausado. Use /resume para retomar o jogo",
