Removed unused translation keys and added missing ones.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -949,7 +949,6 @@
   "block.evolution.sapling_spruce": "Spruce Sapling",
   "block.evolution.sapling_willow": "Willow Sapling",
   "block.evolution.schematic_block": "Schematic Block",
-  "block.evolution.shadowhound": "Shadowhound Block",
   "block.evolution.stick": "Stick",
   "block.evolution.stone_andesite": "Andesite",
   "block.evolution.stone_basalt": "Basalt",
@@ -1029,6 +1028,8 @@
   "item.evolution.clock": "Clock",
   "item.evolution.cricket": "Cricket",
   "item.evolution.debug_item": "Debug Item",
+  "item.evolution.dev_drink": "Debug Drink",
+  "item.evolution.dev_food": "Debug Food",
   "item.evolution.fire_starter": "Fire Starter",
   "item.evolution.firewood_acacia": "Acacia Firewood",
   "item.evolution.firewood_aspen": "Aspen Firewood",
@@ -1269,6 +1270,7 @@
   "item.evolution.plank_spruce": "Spruce Plank",
   "item.evolution.plank_willow": "Willow Plank",
   "item.evolution.rope": "Rope",
+  "item.evolution.sextant": "Sextant",
   "item.evolution.shovel.andesite": "Andesite Shovel",
   "item.evolution.shovel.basalt": "Basalt Shovel",
   "item.evolution.shovel.bismuth": "Bismuth Shovel",
@@ -1318,7 +1320,7 @@
   "item.evolution.shovel_head_shale": "Shale Shovel Head",
   "item.evolution.shovel_head_slate": "Slate Shovel Head",
   "item.evolution.spawn_egg_cow": "Cow Spawn Egg",
-  "item.evolution.spawn_egg_shadowhound": "Shadowhound Spawn Egg",
+  "item.evolution.speedometer": "Speedometer",
   "item.evolution.torch_unlit": "Unlit Torch",
   "_COMMENT": "__________________________________________________________________________________________________________________________EASTER_EGGS",
   "evolution.easter.chert": "The stars were beautiful, weren't they?",
