--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -949,7 +949,6 @@
   "block.evolution.sapling_spruce": "Muda de Pinheiro",
   "block.evolution.sapling_willow": "Muda de Salgueiro",
   "block.evolution.schematic_block": "Bloco de Esquema",
-  "block.evolution.shadowhound": "Bloco de Cachorro das Sombras",
   "block.evolution.stick": "Graveto",
   "block.evolution.stone_andesite": "Andesito",
   "block.evolution.stone_basalt": "Basalto",
@@ -1029,6 +1028,8 @@
   "item.evolution.clock": "Relógio",
   "item.evolution.cricket": "Grilo",
   "item.evolution.debug_item": "Item de Depuração",
+  "item.evolution.dev_drink": "Bebida de Depuração",
+  "item.evolution.dev_food": "Comida de Depuração",
   "item.evolution.fire_starter": "Acendedor de Fogo",
   "item.evolution.firewood_acacia": "Lenha de Acácia",
   "item.evolution.firewood_aspen": "Lenha de Choupo",
@@ -1269,6 +1270,7 @@
   "item.evolution.plank_spruce": "Tábua de Pinheiro",
   "item.evolution.plank_willow": "Tábua de Salgueiro",
   "item.evolution.rope": "Corda",
+  "item.evolution.sextant": "Sextante",
   "item.evolution.shovel.andesite": "Pá de Andesito",
   "item.evolution.shovel.basalt": "Pá de Basalto",
   "item.evolution.shovel.bismuth": "Pá de Bismuto",
@@ -1318,7 +1320,7 @@
   "item.evolution.shovel_head_shale": "Cabeça de Pá de Folhelho",
   "item.evolution.shovel_head_slate": "Cabeça de Pá de Ardósia",
   "item.evolution.spawn_egg_cow": "Ovo de Spawn de Vaca",
-  "item.evolution.spawn_egg_shadowhound": "Ovo de Spawn de Cachorro das Sombras",
+  "item.evolution.speedometer": "Velocímetro",
   "item.evolution.torch_unlit": "Tocha Apagada",
   "_COMMENT": "__________________________________________________________________________________________________________________________EASTER_EGGS",
   "evolution.easter.chert": "As estrelas eram lindas, não eram?",
