Added localization for Stone Hoes and Shovels.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -1060,6 +1060,36 @@
   "item.evolution.part.head.axe.slate": "Slate Axe Head",
   "item.evolution.part.head.axe.tin": "Tin Axe Head",
   "item.evolution.part.head.axe.zinc": "Zinc Axe Head",
+  "item.evolution.part.head.hoe.andesite": "Andesite Hoe Head",
+  "item.evolution.part.head.hoe.basalt": "Basalt Hoe Head",
+  "item.evolution.part.head.hoe.chert": "Chert Hoe Head",
+  "item.evolution.part.head.hoe.diorite": "Diorite Hoe Head",
+  "item.evolution.part.head.hoe.gabbro": "Gabbro Hoe Head",
+  "item.evolution.part.head.hoe.gneiss": "Gneiss Hoe Head",
+  "item.evolution.part.head.hoe.granite": "Granite Hoe Head",
+  "item.evolution.part.head.hoe.limestone": "Limestone Hoe Head",
+  "item.evolution.part.head.hoe.marble": "Marble Hoe Head",
+  "item.evolution.part.head.hoe.red_sandstone": "Red Sandstone Hoe Head",
+  "item.evolution.part.head.hoe.rhyolite": "Rhyolite Hoe Head",
+  "item.evolution.part.head.hoe.sandstone": "Sandstone Hoe Head",
+  "item.evolution.part.head.hoe.schist": "Schist Hoe Head",
+  "item.evolution.part.head.hoe.shale": "Shale Hoe Head",
+  "item.evolution.part.head.hoe.slate": "Slate Hoe Head",
+  "item.evolution.part.head.shovel.andesite": "Andesite Shovel Head",
+  "item.evolution.part.head.shovel.basalt": "Basalt Shovel Head",
+  "item.evolution.part.head.shovel.chert": "Chert Shovel Head",
+  "item.evolution.part.head.shovel.diorite": "Diorite Shovel Head",
+  "item.evolution.part.head.shovel.gabbro": "Gabbro Shovel Head",
+  "item.evolution.part.head.shovel.gneiss": "Gneiss Shovel Head",
+  "item.evolution.part.head.shovel.granite": "Granite Shovel Head",
+  "item.evolution.part.head.shovel.limestone": "Limestone Shovel Head",
+  "item.evolution.part.head.shovel.marble": "Marble Shovel Head",
+  "item.evolution.part.head.shovel.red_sandstone": "Red Sandstone Shovel Head",
+  "item.evolution.part.head.shovel.rhyolite": "Rhyolite Shovel Head",
+  "item.evolution.part.head.shovel.sandstone": "Sandstone Shovel Head",
+  "item.evolution.part.head.shovel.schist": "Schist Shovel Head",
+  "item.evolution.part.head.shovel.shale": "Shale Shovel Head",
+  "item.evolution.part.head.shovel.slate": "Slate Shovel Head",
   "item.evolution.part.head.spear.andesite": "Andesite Spear Head",
   "item.evolution.part.head.spear.basalt": "Basalt Spear Head",
   "item.evolution.part.head.spear.bismuth": "Bismuth Spear Head",
