--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -1060,6 +1060,36 @@
   "item.evolution.part.head.axe.slate": "Cabeça de Machado de Ardósia",
   "item.evolution.part.head.axe.tin": "Cabeça de Machado de Estanho",
   "item.evolution.part.head.axe.zinc": "Cabeça de Machado de Zinco",
+  "item.evolution.part.head.hoe.andesite": "Cabeça de Enxada de Andesito",
+  "item.evolution.part.head.hoe.basalt": "Cabeça de Enxada de Basalto",
+  "item.evolution.part.head.hoe.chert": "Cabeça de Enxada de Cherte",
+  "item.evolution.part.head.hoe.diorite": "Cabeça de Enxada de Diorito",
+  "item.evolution.part.head.hoe.gabbro": "Cabeça de Enxada de Gabro",
+  "item.evolution.part.head.hoe.gneiss": "Cabeça de Enxada de Gnaisse",
+  "item.evolution.part.head.hoe.granite": "Cabeça de Enxada de Granito",
+  "item.evolution.part.head.hoe.limestone": "Cabeça de Enxada de Calcário",
+  "item.evolution.part.head.hoe.marble": "Cabeça de Enxada de Mármore",
+  "item.evolution.part.head.hoe.red_sandstone": "Cabeça de Enxada de Arenito Vermelho",
+  "item.evolution.part.head.hoe.rhyolite": "Cabeça de Enxada de Riolito",
+  "item.evolution.part.head.hoe.sandstone": "Cabeça de Enxada de Arenito",
+  "item.evolution.part.head.hoe.schist": "Cabeça de Enxada de Xisto",
+  "item.evolution.part.head.hoe.shale": "Cabeça de Enxada de Folhelho",
+  "item.evolution.part.head.hoe.slate": "Cabeça de Enxada de Ardósia",
+  "item.evolution.part.head.shovel.andesite": "Cabeça de Pá de Andesito",
+  "item.evolution.part.head.shovel.basalt": "Cabeça de Pá de Basalto",
+  "item.evolution.part.head.shovel.chert": "Cabeça de Pá de Cherte",
+  "item.evolution.part.head.shovel.diorite": "Cabeça de Pá de Diorito",
+  "item.evolution.part.head.shovel.gabbro": "Cabeça de Pá de Gabro",
+  "item.evolution.part.head.shovel.gneiss": "Cabeça de Pá de Gnaisse",
+  "item.evolution.part.head.shovel.granite": "Cabeça de Pá de Granito",
+  "item.evolution.part.head.shovel.limestone": "Cabeça de Pá de Calcário",
+  "item.evolution.part.head.shovel.marble": "Cabeça de Pá de Mármore",
+  "item.evolution.part.head.shovel.red_sandstone": "Cabeça de Pá de Arenito Vermelho",
+  "item.evolution.part.head.shovel.rhyolite": "Cabeça de Pá de Riolito",
+  "item.evolution.part.head.shovel.sandstone": "Cabeça de Pá de Arenito",
+  "item.evolution.part.head.shovel.schist": "Cabeça de Pá de Xisto",
+  "item.evolution.part.head.shovel.shale": "Cabeça de Pá de Folhelho",
+  "item.evolution.part.head.shovel.slate": "Cabeça de Pá de Ardósia",
   "item.evolution.part.head.spear.andesite": "Cabeça de Lança de Andesito",
   "item.evolution.part.head.spear.basalt": "Cabeça de Lança de Basalto",
   "item.evolution.part.head.spear.bismuth": "Cabeça de Lança de Bismuto",
