Improved lunar eclipse and added planet transits.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -30,7 +30,7 @@
   "evolution.config.drink": "Drink Volume Unit",
   "evolution.config.drink.comment": "The volume unit used for drinks in the game.",
   "evolution.config.ecliptic": "Show Ecliptic",
-  "evolution.config.ecliptic.comment": "Shows a green line in the skies representing the Ecliptic (the plane of the orbit of the Earth around the Sun).",
+  "evolution.config.ecliptic.comment": "Shows a magenta line in the skies representing the Ecliptic (the plane of the orbit of the Earth around the Sun).\nFour dots are present on this line:\n - The Lime Dot represents the March Equinox (RA = 0h)\n - The Yellow Dot represents the June Solstice (RA = 6h)\n - The Orange Dot represents the September Equinox (RA = 12h)\n - The White Dot represents the December Solstice (RA = 18h)",
   "evolution.config.enum_imperial": "Imperial",
   "evolution.config.enum_metric": "Metric",
   "evolution.config.followUps": "Show Follow-Up Attack Counter",
@@ -53,13 +53,15 @@
   "evolution.config.mass": "Mass Unit",
   "evolution.config.mass.comment": "The mass unit used in the game.",
   "evolution.config.planets": "Show Planets' Outlines",
-  "evolution.config.planets.comment": "Show outlines around the planets in the sky to better identify them.\nRed is Mercury.\nOrange is Venus.\nYellow is Mars.\nGreen is Jupiter.\nBlue is Saturn.",
+  "evolution.config.planets.comment": "Show outlines around the planets in the sky to better identify them.\nRed is Mercury.\nOrange is Venus.\nYellow is Mars.\nGreen is Jupiter.\nBlue is Saturn.\nGrey is the Moon.",
   "evolution.config.range": "Range: %1$s",
   "evolution.config.renderHeightmap": "Render Heightmap",
   "evolution.config.renderHeightmap.comment": "Render an overlay on top of blocks which shows the world heightmaps.",
   "evolution.config.showPlanets": "Show Planets",
   "evolution.config.showPlanets.comment": "Shows the planets in the skies. Although immersive and realistic, they do not have any gameplay impact. Disabling them might slightly improve performance.",
   "evolution.config.speed": "Speed Unit",
+  "evolution.config.sunPath": "Show Sun Path",
+  "evolution.config.sunPath.comment": "Shows a green line in the skies representing the path of the Sun throughout the day.",
   "evolution.config.torchTime": "Torch Time",
   "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for.\n0 will disable unliting.",
   "evolution.config.volume": "Volume Unit",
