--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -30,7 +30,7 @@
   "evolution.config.drink": "Unidade de Volume de Bebidas",
   "evolution.config.drink.comment": "A unidade de volume usada por bebidas no jogo.",
   "evolution.config.ecliptic": "Mostrar Eclíptica",
-  "evolution.config.ecliptic.comment": "Mostra uma linha verde nos céus representando a Eclíptica (o plano de órbita da Terra em torno do Sol).",
+  "evolution.config.ecliptic.comment": "Mostra uma linha magenta nos céus representando a Eclíptica (o plano de órbita da Terra em torno do Sol).\nQuatro pontos estão presentes nessa linha:\n - O ponto verde limão representa o Equinócio de Março (RA = 0h)\n - O ponto amarelo representa o Solstício de Junho (RA = 6h)\n - O ponto laranja representa o Equinócio de Setembro (RA = 12h)\n - O ponto branco representa o Solstício de Dezembro (RA = 18h)",
   "evolution.config.enum_imperial": "Imperial",
   "evolution.config.enum_metric": "Métrico",
   "evolution.config.followUps": "Mostrar Contador de Ataques Subsequentes",
@@ -53,13 +53,15 @@
   "evolution.config.mass": "Unidade de Massa",
   "evolution.config.mass.comment": "A unidade de massa usada no jogo.",
   "evolution.config.planets": "Mostrar Contornos dos Planetas",
-  "evolution.config.planets.comment": "Mostra contornos em volta dos planetas no céu para melhor identificá-los.\nVermelho é Mercúrio.\nLaranja é Vênus.\nAmarelo é Marte.\nVerde é Júpiter.\nAzul é Saturno.",
+  "evolution.config.planets.comment": "Mostra contornos em volta dos planetas no céu para melhor identificá-los.\nVermelho é Mercúrio.\nLaranja é Vênus.\nAmarelo é Marte.\nVerde é Júpiter.\nAzul é Saturno.\nCinza é a Lua.",
   "evolution.config.range": "Intervalo: %1$s",
   "evolution.config.renderHeightmap": "Renderizar Mapa de Altitudes",
   "evolution.config.renderHeightmap.comment": "Renderiza uma overlay em cima dos blocos que mostra o mapa de altitudes do mundo.",
   "evolution.config.showPlanets": "Mostrar Planetas",
   "evolution.config.showPlanets.comment": "Mostra os planetas nos céus. Embora imersivo e realista, eles não têm qualquer impacto na jogabilidade. Desabilitá-los pode levemente melhorar a performance.",
   "evolution.config.speed": "Unidade de Velocidade",
+  "evolution.config.sunPath": "Mostrar Caminho do Sol",
+  "evolution.config.sunPath.comment": "Mostra uma linha verde nos céus representando o caminho do Sol através do dia.",
   "evolution.config.torchTime": "Tempo da Tocha",
   "evolution.config.torchTime.comment": "Define o tempo pelo qual a tocha ficará acessa, em horas dentro do jogo.\n0 vai desabilitar que elas apaguem.",
   "evolution.config.volume": "Unidade de Volume",
