Added damage types for world border and /kill.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -288,6 +288,7 @@
   "evolution.subtitle.weapon_hit_block": "Weapon hits block",
   "evolution.subtitle.wood_collapse": "Wood Collapsing",
   "_COMMENT": "_______________________________________________________________________________________________________________________DEATH MESSAGES",
+  "death.attack.border": "%1$s left the confines of this world",
   "death.attack.dehydration": "%1$s dehydrated to death",
   "death.attack.dehydration.player": "%1$s dehydrated to death while fighting %2$s",
   "death.attack.efficiency": "%1$s could not handle such efficiency!",
@@ -301,6 +302,8 @@
   "death.attack.hook": "%1$s was hooked by %2$s",
   "death.attack.in_fire": "%1$s went up in flames",
   "death.attack.in_wall": "%1$s suffocated in a wall",
+  "death.attack.kill": "%1$s was killed",
+  "death.attack.kill.player": "%1$s was killed while fighting %2$s",
   "death.attack.on_fire": "%1$s burned to death",
   "death.attack.spear": "%1$s was impaled by %2$s",
   "death.attack.spear.item": "%1$s was impaled by %2$s using %3$s",
@@ -309,12 +312,12 @@
   "death.attack.wall_impact.player": "%1$s was thrown against a wall while fighting %2$s",
   "death.attack.water_impact": "%1$s hit water too hard",
   "death.attack.water_intoxication": "%1$s died of water intoxication",
-  "death.attack.water_intoxication.player": "%1$s died of water intoxication while fighting %2$s",
+  "death.attack.water_intoxication.player": "%1$s drinked too much water while fighting %2$s",
   "death.item.fists": "their bare fists",
   "death.fell.accident.generic": "%1$s fell from a high place",
   "death.fell.accident.ladder": "%1$s fell off a ladder",
   "death.fell.accident.rope": "%1$s fell off a rope",
-  "death.fell.accident.vines": "%1$s fell off some vines",
+  "death.fell.accident.vines": "%1$s fell off vines",
   "death.fell.assist.generic": "%1$s was doomed to fall by %2$s",
   "death.fell.assist.ladder": "%1$s was pushed off a ladder by %2$s",
   "death.fell.assist.rope": "%1$s was pushed off a rope by %2$s",
@@ -322,19 +325,19 @@
   "death.fell.assist.item.generic": "%1$s was doomed to fall by %2$s using %3$s",
   "death.fell.assist.item.ladder": "%1$s was pushed off a ladder by %2$s using %3$s",
   "death.fell.assist.item.rope": "%1$s was pushed off a rope by %2$s using %3$s",
-  "death.fell.assist.item.vines": "%1$s was pushed off some vines by %2$s using %3$s",
+  "death.fell.assist.item.vines": "%1$s was pushed off vines by %2$s using %3$s",
   "death.fell.finish.generic": "%1$s fell too far and was finished by %2$s",
   "death.fell.finish.ladder": "%1$s fell off a ladder and was finished by %2$s",
   "death.fell.finish.rope": "%1$s fell off a rope and was finished by %2$s",
-  "death.fell.finish.vines": "%1$s fell off some vines and was finished by %2$s",
+  "death.fell.finish.vines": "%1$s fell off vines and was finished by %2$s",
   "death.fell.finish.item.generic": "%1$s fell too far and was finished by %2$s using %3$s",
   "death.fell.finish.item.ladder": "%1$s fell off a ladder and was finished by %2$s using %3$s",
   "death.fell.finish.item.rope": "%1$s fell off a rope and was finished by %2$s using %3$s",
-  "death.fell.finish.item.vines": "%1$s fell off some vines and was finished by %2$s using %3$s",
+  "death.fell.finish.item.vines": "%1$s fell off vines and was finished by %2$s using %3$s",
   "death.fell.killer.generic": "%1$s was doomed to fall",
   "death.fell.killer.ladder": "%1$s was pushed off a ladder",
   "death.fell.killer.rope": "%1$s was pushed off a rope",
-  "death.fell.killer.vines": "%1$s was pushed off some vines",
+  "death.fell.killer.vines": "%1$s was pushed off vines",
   "_COMMENT": "_________________________________________________________________________________________________________________________ADVANCEMENTS",
   "evolution.advancements.stone_age.root.title": "Stone Age",
   "evolution.advancements.stone_age.root.description": "Our adventure begins in the Stone Age\nThe advancements will guide you!",
