--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -288,6 +288,7 @@
   "evolution.subtitle.weapon_hit_block": "Arma acerta bloco",
   "evolution.subtitle.wood_collapse": "Madeira caindo",
   "_COMMENT": "_______________________________________________________________________________________________________________________DEATH MESSAGES",
+  "death.attack.border": "%1$s deixou os confins deste mundo",
   "death.attack.dehydration": "%1$s desidratou até a morte",
   "death.attack.dehydration.player": "%1$s desidratou até a morte enquanto lutava com %2$s",
   "death.attack.efficiency": "%1$s não conseguiu aguentar tamanha eficiência!",
@@ -301,6 +302,8 @@
   "death.attack.hook": "%1$s foi enganchado(a) por %2$s",
   "death.attack.in_fire": "%1$s foi incinerado(a)",
   "death.attack.in_wall": "%1$s sufocou numa parede",
+  "death.attack.kill": "%1$s foi morto(a)",
+  "death.attack.kill.player": "%1$s foi morto(a) enquanto lutava com %2$s",
   "death.attack.on_fire": "%1$s morreu carbonizado(a)",
   "death.attack.spear": "%1$s foi empalado(a) por %2$s",
   "death.attack.spear.item": "%1$s foi empalado(a) por %2$s com %3$s",
@@ -309,16 +312,16 @@
   "death.attack.wall_impact.player": "%1$s foi jogado(a) contra uma parede enquanto lutava com %2$s",
   "death.attack.water_impact": "%1$s bateu na água com muita força",
   "death.attack.water_intoxication": "%1$s morreu de intoxicação por água",
-  "death.attack.water_intoxication.player": "%1$s morreu de intoxicação por água enquanto lutava com %2$s",
+  "death.attack.water_intoxication.player": "%1$s bebeu muita água enquanto lutava com %2$s",
   "death.item.fists": "seus próprios punhos",
   "death.fell.accident.generic": "%1$s caiu de um lugar alto",
   "death.fell.accident.ladder": "%1$s caiu de uma escada",
   "death.fell.accident.rope": "%1$s caiu de uma corda",
-  "death.fell.accident.vines": "%1$s caiu de algumas vinhas",
+  "death.fell.accident.vines": "%1$s caiu de vinhas",
   "death.fell.assist.generic": "%1$s foi condenado(a) a cair por %2$s",
   "death.fell.assist.ladder": "%1$s foi empurrado(a) de uma escada por %2$s",
   "death.fell.assist.rope": "%1$s foi empurrado(a) de uma corda por %2$s",
-  "death.fell.assist.vines": "%1$s foi empurrado(a) de algumas vinhas por %2$s",
+  "death.fell.assist.vines": "%1$s foi empurrado(a) de vinhas por %2$s",
   "death.fell.assist.item.generic": "%1$s foi condenado(a) a cair por %2$s com %3$s",
   "death.fell.assist.item.ladder": "%1$s foi empurrado(a) de uma escada por %2$s com %3$s",
   "death.fell.assist.item.rope": "%1$s foi empurrado(a) de uma corda por %2$s com %3$s",
@@ -326,15 +329,15 @@
   "death.fell.finish.generic": "%1$s caiu de muito alto e foi finalizado(a) por %2$s",
   "death.fell.finish.ladder": "%1$s caiu de uma escada e foi finalizado(a) por %2$s",
   "death.fell.finish.rope": "%1$s caiu de uma corda e foi finalizado(a) por %2$s",
-  "death.fell.finish.vines": "%1$s caiu de algumas vinhas e foi finalizado(a) por %2$s",
+  "death.fell.finish.vines": "%1$s caiu de vinhas e foi finalizado(a) por %2$s",
   "death.fell.finish.item.generic": "%1$s caiu de muito alto e foi finalizado(a) por %2$s com %3$s",
   "death.fell.finish.item.ladder": "%1$s caiu de uma escada e foi finalizado(a) por %2$s com %3$s",
   "death.fell.finish.item.rope": "%1$s caiu de uma corda e foi finalizado(a) por %2$s com %3$s",
-  "death.fell.finish.item.vines": "%1$s caiu de algumas vinhas e foi finalizado(a) por %2$s com %3$s",
+  "death.fell.finish.item.vines": "%1$s caiu de vinhas e foi finalizado(a) por %2$s com %3$s",
   "death.fell.killer.generic": "%1$s foi condenado(a) a cair",
   "death.fell.killer.ladder": "%1$s foi empurrado de uma escada",
   "death.fell.killer.rope": "%1$s foi empurrado de uma corda",
-  "death.fell.killer.vines": "%1$s foi empurrado de algumas vinhas",
+  "death.fell.killer.vines": "%1$s foi empurrado de vinhas",
   "_COMMENT": "_________________________________________________________________________________________________________________________ADVANCEMENTS",
   "evolution.advancements.stone_age.root.title": "Idade da Pedra",
   "evolution.advancements.stone_age.root.description": "Nossa aventura começa na Idade da Pedra\nOs progressos irão lhe guiar!",
