Added missing damage localization for the statistics screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -357,6 +357,7 @@
   "stat.evolution.times_knapping": "Times Knapping",
   "stat.evolution.times_slept": "Times Slept",
   "stat.evolution.death_arrow": "Death by Arrow Shots",
+  "stat.evolution.death_border": "Death by World Border",
   "stat.evolution.death_dehydration": "Death by Dehydration",
   "stat.evolution.death_doomed_to_fall": "Death by Being Doomed to Fall",
   "stat.evolution.death_drown": "Death by Drowning",
@@ -371,6 +372,7 @@
   "stat.evolution.death_hook": "Death by Being Hooked",
   "stat.evolution.death_in_fire": "Death by Flames",
   "stat.evolution.death_in_wall": "Death by Suffocation in Walls",
+  "stat.evolution.death_kill": "Death by Commands",
   "stat.evolution.death_on_fire": "Death by Burning",
   "stat.evolution.death_player": "Death by Players",
   "stat.evolution.death_spear": "Death by Being Impaled",
