--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -357,6 +357,7 @@
   "stat.evolution.times_knapping": "Vezes que Lascou Pedra",
   "stat.evolution.times_slept": "Vezes que Dormiu",
   "stat.evolution.death_arrow": "Morte por Flechadas",
+  "stat.evolution.death_border": "Morte pela Barreira do Mundo",
   "stat.evolution.death_dehydration": "Morte por Desidratação",
   "stat.evolution.death_doomed_to_fall": "Morte por ser Condenado a Cair",
   "stat.evolution.death_drown": "Morte por Afogamento",
@@ -371,6 +372,7 @@
   "stat.evolution.death_hook": "Morte por ser Enganchado",
   "stat.evolution.death_in_fire": "Morte por Incineração",
   "stat.evolution.death_in_wall": "Morte por Sufocamento em Paredes",
+  "stat.evolution.death_kill": "Morte por Comandos",
   "stat.evolution.death_on_fire": "Morte por Carbonização",
   "stat.evolution.death_player": "Morte por Jogadores",
   "stat.evolution.death_spear": "Morte por Empalamento",
