--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -62,6 +62,8 @@
   "evolution.config.speed": "Speed Unit",
   "evolution.config.sunPath": "Show Sun Path",
   "evolution.config.sunPath.comment": "Shows a green line in the skies representing the path of the Sun throughout the day.",
+  "evolution.config.syncRendering": "Compile Chunks only on the Main Thread",
+  "evolution.config.syncRendering.comment": "Makes chunk compilation only be computed on the main thread, as it was in old version like 1.6.4. This will slow down chunk loading, but performance may be more stable.",
   "evolution.config.torchTime": "Torch Time",
   "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for.\n0 will disable unliting.",
   "evolution.config.volume": "Volume Unit",
