Added Evolution gamerules and configured the default ones.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -10,6 +10,8 @@
   "itemGroup.evolution.misc": "Misc",
   "itemGroup.evolution.parts_and_tools": "Parts and Tools",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
+  "_COMMENT": "____________________________________________________________________________________________________________________________GAMERULES",
+  "gamerule.torchDuration": "How many hours torches last",
   "_COMMENT": "______________________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Allowed Values: %1$s",
   "evolution.config.animatedTextures": "Animated Textures",
@@ -64,8 +66,6 @@
   "evolution.config.sunPath.comment": "Shows a green line in the skies representing the path of the Sun throughout the day.",
   "evolution.config.syncRendering": "Compile Chunks only on the Main Thread",
   "evolution.config.syncRendering.comment": "Makes chunk compilation only be computed on the main thread, as it was in old version like 1.6.4. This will slow down chunk loading, but performance may be more stable.",
-  "evolution.config.torchTime": "Torch Time",
-  "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for.\n0 will disable unliting.",
   "evolution.config.volume": "Volume Unit",
   "evolution.config.volume.comment": "The volume unit used in the game.",
   "forge.config.label.client": "Client",
