--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -10,6 +10,8 @@
   "itemGroup.evolution.misc": "Diversos",
   "itemGroup.evolution.parts_and_tools": "Partes e Ferramentas",
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
+  "_COMMENT": "____________________________________________________________________________________________________________________________GAMERULES",
+  "gamerule.torchDuration": "Quantas horas as tochas duram",
   "_COMMENT": "______________________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Valores Permitidos: %1$s",
   "evolution.config.animatedTextures": "Texturas Animadas",
@@ -64,8 +66,6 @@
   "evolution.config.sunPath.comment": "Mostra uma linha verde nos céus representando o caminho do Sol através do dia.",
   "evolution.config.syncRendering": "Compilar Chunks apenas no Thread Principal",
   "evolution.config.syncRendering.comment": "Faz com que a compilação de chunks seja computada apenas no thread principal, como era em versões antigas como 1.6.4. Isso irá deixar o carregamento de chunks mais lento, mas a performance pode ficar mais estável.",
-  "evolution.config.torchTime": "Tempo da Tocha",
-  "evolution.config.torchTime.comment": "Define o tempo pelo qual a tocha ficará acessa, em horas dentro do jogo.\n0 vai desabilitar que elas apaguem.",
   "evolution.config.volume": "Unidade de Volume",
   "evolution.config.volume.comment": "A unidade de volume usada no jogo.",
   "forge.config.label.client": "Client",
